update recipe controller