@@ -5,6 +5,7 @@ import com.recipefy.recipefy_backend.service.NutritionService;
 import com.recipefy.recipefy_backend.service.RecipeService;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -40,8 +41,17 @@ public class RecipeController {
     }
     private final NutritionService nutritionService;
     @PostMapping("/estimate-calories")
-    public Map<String, Integer> estimateCalories(@RequestBody Map<String, List<String>> request) {
-        int calories = nutritionService.calculateCalories(request.get("ingredients"));
-        return Collections.singletonMap("calories", calories);
+    public Map<String, Object> estimateCalories(@RequestBody Map<String, List<String>> request) {
+        List<String> ingredients = request.get("ingredients");
+        int calories = nutritionService.calculateCalories(ingredients);
+
+        // Get failed ingredients from the service if available
+        List<String> failedIngredients = new ArrayList<>();
+        // You'll need to modify NutritionService to track these
+
+        return Map.of(
+                "calories", calories,
+                "failedIngredients", failedIngredients
+        );
     }
 }
